service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: k8s-demo
spec:
  ports:
  - name: app
    port: 3000
    protocol: TCP
    targetPort: app
  selector:
    app: demo
  type: ClusterIP
