ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: demo
  namespace: k8s-demo
spec:
  rules:
  - host: k8s-demo.development.voiceflow.com
    http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - k8s-demo.development.voiceflow.com
    secretName: k8s-demo-tls
